--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ $.jsBinder(options);
     </div>
 
     <script src="http://code.jquery.com/jquery.js"></script>
-    <script src="../jquery.js-binder.min.js"></script>
+    <script src="../jsBinder/jquery.js-binder.min.js"></script>
     <script src="user.js"></script>
   </body>
 </html>
